# dood-cli

./: Cargo.toml  README.md
src/: auth.rs  config.rs  crypto.rs  database.rs  main.rs  messages.rs  server.rs  ui.rs
